--- a/NewsPaper/templates/flatpages/default.html
+++ b/NewsPaper/templates/flatpages/default.html
@@ -28,7 +28,7 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="/default">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="/news">News</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/search">Search</a></li>
                     </ul>
                 </div>
             </div>
