--- a/NewsPaper/templates/flatpages/default.html
+++ b/NewsPaper/templates/flatpages/default.html
@@ -38,6 +38,9 @@
             <div class="container">
                     {% block content %}
                     {{ flatpage.content }}
+                    <form method="post">
+                        <input type="text" name="fvsd" id="">
+                    </form>
                     {% endblock content %}
             </div>
         </main>
