--- a/NewsPaper/templates/news.html
+++ b/NewsPaper/templates/news.html
@@ -7,15 +7,15 @@
 
 {% block content %}
 
-<h2 align="center">Специальные новости:</h2>
+<h2 align="center">Special news:</h2>
 {% if news %}
 <table class="table">
     <thead class="thead-dark" align="center">
       <tr>
-        <th scope="col">Автор</th>
-        <th scope="col">Заголовок</th>
-        <th scope="col">Дата публикации</th>
-        <th scope="col">Первые 50 символов текста</th>
+        <th scope="col">Author</th>
+        <th scope="col">Title</th>
+        <th scope="col">Publication Date</th>
+        <th scope="col">First 50 characters of text</th>
       </tr>
     </thead>
     {% for post in object_list %}
